完成基本驱动适配

--- a/资源分配表.md
+++ b/资源分配表.md
@@ -1,7 +1,7 @@
 | GOIO | 外设       | 功能         | 备注             |
 | ---- | ---------- | ------------ | ---------------- |
-| PA1  | GOIO\_OUT  | LED\_Y       |                  |
-| PA2  | GOIO\_OUT  | LED\_R       |                  |
+| PA1  | GOIO\_OUT  | LED\_Y       | TIM2_CH2         |
+| PA2  | GOIO\_OUT  | LED\_R       | TIM2_CH3         |
 | PA4  | GOIO\_OUT  | FLASH        |                  |
 | PA5  | SPI1\_SCK  | FLASH        |                  |
 | PA6  | SPI1\_MISO | FLASH        |                  |
