--- a/资源分配表.md
+++ b/资源分配表.md
@@ -2,22 +2,15 @@
 | ---- | ---------- | ------------ | ---------------- |
 | PA1  | GOIO\_OUT  | LED\_Y       | TIM2_CH2         |
 | PA2  | GOIO\_OUT  | LED\_R       | TIM2_CH3         |
-| PA4  | GOIO\_OUT  | FLASH        |                  |
-| PA5  | SPI1\_SCK  | FLASH        |                  |
-| PA6  | SPI1\_MISO | FLASH        |                  |
-| PA7  | SPI1\_MOSI | FLASH        |                  |
+| PA4  | GOIO\_OUT  | FLASH\_CS     |                  |
+| PA5  | SPI1\_SCK  | FLASH\_SCK    |                  |
+| PA6  | SPI1\_MISO | FLASH\_MISO   |                  |
+| PA7  | SPI1\_MOSI | FLASH\_MOSI   |                  |
 | PB0  | GOIO\_OUT  | SWD-RST      |                  |
 | PB1  | TIM3\_CH4  | BEEP         |                  |
-| PB10 |            | SWIM-SWIM    | 通过电阻接到PB11 |
-| PB11 |            | SWIM-SWIM    |                  |
 | PB12 | GOIO\_OUT  | SWD-SDIO-OUT | 通过电阻接到PB14 |
 | PB13 | GOIO\_OUT  | SWD-SCK      |                  |
 | PB14 | GOIO\_IN   | SWD-SDIO-IN  |                  |
 | PA8  | GOIO\_IN   | Key          |                  |
 | PA11 | USB\_DM    | USB          |                  |
 | PA12 | USB\_DP    | USB          |                  |
-| PB5  |            | SWIM-RST     | 通过电阻接到PB6  |
-| PB6  |            | SWIM-RST     |                  |
-| PB7  |            | SWIM-SWIM    | 短接到PB10       |
-| PB8  |            | SWIM-SWIM    | 短接到PB11       |
-| PB9  |            | SWIM-SWIM    | 短接到PB10       |
